Evosiute and Randoop testing added and implementations changed for java 8